# dlib

./: .gitignore  .gitmodules  README.md
examples/: CMakeLists.txt  CMakeLists.txt.backup  webcam_head_pose.cpp
examples/build2/: 3d_point_cloud_ex  CMakeCache.txt  Makefile  assignment_learning_ex  bayes_net_ex  bayes_net_from_disk_ex  bayes_net_gui_ex  bridge_ex  bsp_ex  cmake_install.cmake  compress_stream_ex  config_reader_ex  custom_trainer_ex  dir_nav_ex  empirical_kernel_map_ex  face_detection_ex  face_landmark_detection_ex  face_landmark_detection_to_file  fhog_ex  fhog_object_detector_ex  file_to_code_ex  graph_labeling_ex  gui_api_ex  hough_transform_ex  image_ex  integrate_function_adapt_simp_ex  iosockstream_ex  kcentroid_ex  kkmeans_ex  krls_ex  krls_filter_ex  krr_classification_ex  krr_regression_ex  learning_to_track_ex  least_squares_ex  linear_manifold_regularizer_ex  logger_custom_output_ex  logger_ex  logger_ex_2  matrix_ex  (+50 more)
examples/build2/dlib_build/: Makefile  cmake_install.cmake
examples/buildcpr/: CMakeCache.txt  Makefile  assignment_learning_ex  cmake_install.cmake  face_landmark_detection_to_file  sqlite_ex  webcam_face_pose_ex  webcam_face_pose_fast  webcam_head_pose
examples/buildcpr/cpr/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/cpr/cpr/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/cpr/opt/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/cpr/opt/curl/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  curl-config  libcurl.pc
examples/buildcpr/cpr/opt/curl/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  curl_config.h
examples/buildcpr/cpr/opt/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/cpr/opt/mongoose/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/cpr/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/buildcpr/dlib_build/: Makefile
examples/buildcpr/lib/: libcurl.dylib
(+15 files in other folders)
